crates/compiler/tests/parse_errors/problem_in_def.elm
module Main exposing (..)
f x@ = 1
